--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ PORT=5000
 # Base Mongo URI (WITHOUT db name)
 # Examples:
 #   mongodb://localhost:27017
-#   mongodb+srv://user:password@cluster.mongodb.net
+#   mongodb+srv://<USERNAME>:<PASSWORD>@<CLUSTER_HOST>/<DB_NAME>?retryWrites=true&w=majority
 MONGO_URI=
 
 # Optional database name (appended safely if provided)
@@ -29,7 +29,7 @@ DB_NAME=file-drive
 
 # Option A (recommended): full Redis URL
 # Example:
-#   redis://:password@localhost:6379
+#   redis://:<PASSWORD>@<HOST>:6379
 REDIS_URL=
 
 # Option B (used if REDIS_URL is not set)
